added unit test for yahoo scraper extraction logic